[gd_scene load_steps=6 format=3 uid="uid://cll8t13rkq4vy"]

[ext_resource type="PackedScene" uid="uid://x1vsm78ovyuh" path="res://player.tscn" id="1_6twae"]
[ext_resource type="Script" path="res://main.gd" id="1_sj6fq"]
[ext_resource type="PackedScene" uid="uid://bb1afc0sgehy0" path="res://mob.tscn" id="2_46v7k"]
[ext_resource type="PackedScene" uid="uid://bjmiqyhj5g8c3" path="res://hud.tscn" id="4_wq518"]

[sub_resource type="Curve2D" id="Curve2D_g7exj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -8, 0, 0, 0, 0, 480, -8, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, -8)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_sj6fq")
Mob = ExtResource("2_46v7k")

[node name="BackGround" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -14.0
offset_right = 485.0
offset_bottom = 725.0
color = Color(0.235294, 0.611765, 0.701961, 1)

[node name="Player" parent="." instance=ExtResource("1_6twae")]
position = Vector2(179, 158)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPos4Player" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_g7exj")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(0, -8)

[node name="HUD" parent="." instance=ExtResource("4_wq518")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
